Summer camp and other things added

--- a/index.html
+++ b/index.html
@@ -392,6 +392,21 @@
                         <h3>OUR ACTIVITIES THROUGHT GOA</h3>
                         <div class="separator"></div>
                     </div>
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <p>This year Summer promises to be extra grand for people with stars on their mind😀</p>
+                      <p>This years summer session at AFA is something extraordinary... Meticulously and with back breaking efforts, we have put together a session for 100% astronomy education...</p>
+                        <ul>
+                            <li># Telescopes</li>
+                            <li># Observation</li>
+                            <li># Software</li>
+                            <li># Astrophotography</li>
+                        </ul>   
+
+                        <p>Come see us and have a good time...</p> 
+                        
+                        <a href="/assets/images/Temperory/summercamp.jpeg" target="_blank" download>Click here to download the summercamp schedule</a>
+                    </div>
                     <iframe src="https://calendar.google.com/calendar/embed?src=en04dndnrfmteuonean67vg3a4%40group.calendar.google.com&ctz=Asia%2FCalcutta" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </section>
 
@@ -411,10 +426,10 @@
 
                                             <div class="single_features_slide">
                                                 <div class="single_ft_s_item">
-                                                    <img src="assets/images/telescopes/astrograph.jpg" alt="" />
+                                                    <img src="assets/images/telescopes/astrograph.png" alt="" />
                                                 </div>
                                                 <div class="single_ft_s_item">
-                                                    <img src="assets/images/telescopes/c14.jpg" alt="" />
+                                                    <img src="assets/images/telescopes/c14.png" alt="" />
                                                 </div>
                                                 <div class="single_ft_s_item">
                                                     <img src="assets/images/telescopes/c6.jpg" alt="" />
@@ -427,16 +442,11 @@
                                         <div class="col-sm-6">
                                             <div class="single_features_text">
                                                 <h4>The Cassegrenian 14 telescope</h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                                    when an unknown printer took a galley of type and scrambled </p>
-
-                                                <ul>
-                                                    <li><span>Client:</span> Dadit Lorm</li>
-                                                    <li><span>Deivered:</span> Sunday, 15 August, 2015</li>
-                                                    <li><span>Tags:</span> Hand, Watch, Black, Tree</li>
-                                                </ul>
-
+                                                <p>A complete observational platform that includes an over-sized aperture OTA, the NexStar+ computer hand controller, an updated motorized equatorial mount and tripod, plus an array of accessories to get you set up and observing the Moon, planets, and especially deep-sky subjects like nebulae, galaxies, and star clusters.</p>
+                                            </div>
+                                            <div class="single_features_text">
+                                                <h4>10" f/4 Imaging Newtonian Astrograph w/ NEQ6 SkyScan Pro GoTo mount</h4>
+                                                <p>Our 10" TS Imaging Newtonian TSIMN10s with its fast focal ratio of f/4 is optimized for astro photography and visual rich-field observation also. A large 88mm secondary mirror and the ultrastable 2" Monorail focuser guraantee a visual and photographic field with a minimum amount of vignetting. The mechanical design had optimal stability in mind. The the telescope is made from GSO for Teleskop-Service.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -627,7 +637,8 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="about_skill">
-                                                    <img src="assets/images/featureslid1.jpg">
+                                                    <img src="assets/images/President.JPG">
+                                                    <div style="text-align: center;font-size: 120%">Our team honoured by the President Dr. APJ Abdul Kalam</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -658,7 +669,8 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4><span><i class="fa fa-clock-o"></i></span> AFA OBSERVERS CLUB</h4>
+                                                    <!--                                                    <h4><span><i class="fa fa-clock-o"></i></span> AFA OBSERVERS CLUB</h4>-->                               
+                                                    <h4><span><img src="assets/images/clubs/Observers.jpg" style="height: 160px; width: 160px;" ></span></h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -668,7 +680,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-picture-o"></i></span> AFA PHOTOGRAPHY CLUB</h4>
+                                                    <h4><span><img src="assets/images/clubs/pHOTOGRAPHY.jpg" style="height: 160px; width: 160px;" ></span></h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -678,19 +690,7 @@
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-television"></i></span> AFA LITERARY CLUB</h4>
-                                                </div>
-                                                <div class="single_othersservice_content">
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-
-                                        <div class="col-sm-4">
-                                            <div class="single_othersservice">
-                                                <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-object-group"></i></span>AFA ASTRO KIDS CLUB</h4>
+                                                    <h4><span><img src="assets/images/clubs/Literary.jpg" style="height: 160px; width: 160px;" ></span></h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -698,10 +698,22 @@
                                             </div>
                                         </div>
 
+
                                         <div class="col-sm-4">
                                             <div class="single_othersservice">
                                                 <div class="single_othersservice_icon">
-                                                    <h4> <span><i class="fa fa-object-group"></i></span> PHOTOGRAPHY</h4>
+                                                    <h4><span><img src="assets/images/clubs/ASTROKIDS.jpg" style="height: 160px; width: 160px;" ></span></h4>
+                                                </div>
+                                                <div class="single_othersservice_content">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-4">
+                                            <div class="single_othersservice">
+                                                <div class="single_othersservice_icon">
+                                                    <h4><span><img src="assets/images/clubs/Science.jpg" style="height: 160px; width: 160px;" ></span></h4>
                                                 </div>
                                                 <div class="single_othersservice_content">
 
@@ -714,7 +726,7 @@
                                             <div class="single_othersservice">
                                                 <div class="s_ot_i_area">
                                                     <div class="single_othersservice_icon">
-                                                        <h4><span><i class="fa fa-object-group"></i></span> LOGO DESIGN</h4>
+                                                        <h4><span><img src="assets/images/clubs/THINKING.jpg" style="height: 160px; width: 160px;" ></span></h4>
                                                     </div>
                                                 </div>
                                                 <div class="single_othersservice_content">
