--- a/index.html
+++ b/index.html
@@ -546,14 +546,14 @@
 
                                         <div class="col-sm-5">
                                             <div class="single_about_left_img margin-top-40 text-center wow fadeInLeft" data-wow-duration=".6s">
-                                                <img src="assets/images/abright.png" alt="" />
+                                                <img src="assets/images/banner1.jpg" alt="" style="padding-top: 120px" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="about_skill_area">
                                             <div class="col-sm-6">
-                                                <div class="about_tabe">
+                                                <div class="about_tabe hidden">
                                                     <!-- Nav tabs -->
                                                     <ul class="about_tabe_menu" role="tablist">
                                                         <li role="presentation" class="active"><a href="#mission" aria-controls="mission" role="tab" data-toggle="tab">OUR MISSION</a></li>
@@ -837,7 +837,7 @@
                             <div class="col-sm-6">
                                 <div class="single_choose">
                                     <div class="single_choose_img">
-                                        <img src="assets/images/choose.png" alt="">
+                                        <img src="assets/images/via-lactea.png" alt="">
                                     </div>
                                 </div>
                             </div>
