--- a/index.html
+++ b/index.html
@@ -872,92 +872,162 @@
 
                             <div style="clear:both;"></div>     
                             <div id="portfoliowork"> 
-                                <div class="single_portfolio tile scale-anm web grid-item-width2" >
-                                    <img src="assets/images/pf1.jpg" alt="" />
+                                <div class="single_portfolio tile scale-anm flyers grid-item-width2" >
+                                    <img src="assets/images/gallery/01.jpg" alt="" />
                                     <div class="grid_item_overlay g_overlay_1">
-                                        <a href="assets/images/pf1.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/01.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
                                 <div class="single_portfolio tile scale-anm bcards" >
-                                    <img src="assets/images/pf2.jpg" alt="" />
+                                    <img src="assets/images/gallery/02.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf2.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/02.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
-                                <div class="single_portfolio tile scale-anm web ">
-                                    <img src="assets/images/pf3.jpg" alt="" />
+                                <div class="single_portfolio tile scale-anm flyers ">
+                                    <img src="assets/images/gallery/03.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf3.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/03.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
-                                <div class="single_portfolio tile scale-anm web" >
-                                    <img src="assets/images/pf4.jpg" alt="" />
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/04.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf4.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/04.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
                                 <div class="single_portfolio tile scale-anm bcards" >
-                                    <img src="assets/images/pf8.jpg" alt="" />  
+                                    <img src="assets/images/gallery/05.jpg" alt="" />  
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf8.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/05.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
-                                <div class="single_portfolio tile scale-anm web" >
-                                    <img src="assets/images/pf9.jpg" alt="" />
+                                <div class="single_portfolio tile scale-anm bcards" >
+                                    <img src="assets/images/gallery/06.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf9.jpg" class="portfolio-img"> 
+                                        <a href="assets/images/gallery/06.jpg" class="portfolio-img"> 
                                             <i class="fa fa-link"></i>
                                         </a>
+<!--
                                         <a href="#"> 
                                             <i class="fa fa-search"></i>
                                         </a>
+-->
                                     </div>
                                 </div> 
                                 <div class="single_portfolio tile scale-anm flyers">
-                                    <img src="assets/images/pf5.jpg" alt="" />
-                                    <div class="grid_item_overlay g_overlay_2">
-                                        <a href="assets/images/pf5.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                    <img src="assets/images/gallery/07.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/07.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
                                 <div class="single_portfolio tile scale-anm flyers">
-                                    <img src="assets/images/pf6.jpg" alt="" />
-                                    <div class="grid_item_overlay g_overlay_1">
-                                        <a href="assets/images/pf6.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                    <img src="assets/images/gallery/08.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/08.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
 
                                 <div class="single_portfolio tile scale-anm bcards" >
-                                    <img src="assets/images/pf7.jpg" alt="" />
+                                    <img src="assets/images/gallery/09.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf7.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/09.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
                                 <div class="single_portfolio tile scale-anm flyers">
-                                    <img src="assets/images/pf6.jpg" alt="" />
-                                    <div class="grid_item_overlay g_overlay_1">
-                                        <a href="assets/images/pf6.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                    <img src="assets/images/gallery/10.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/10.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+
+                                <div class="single_portfolio tile scale-anm web" >
+                                    <img src="assets/images/gallery/11.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/11.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
 
                                 <div class="single_portfolio tile scale-anm bcards" >
-                                    <img src="assets/images/pf7.jpg" alt="" />
+                                    <img src="assets/images/gallery/12.jpg" alt="" />
                                     <div class="grid_item_overlay">
-                                        <a href="assets/images/pf7.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
-                                        <a href="#"> <i class="fa fa-search"></i></a>
+                                        <a href="assets/images/gallery/12.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
                                     </div>
                                 </div>
-
-
-
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/13.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/13.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/14.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/14.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/15.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/15.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm bcards" >
+                                    <img src="assets/images/gallery/16.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/16.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm bcards" >
+                                    <img src="assets/images/gallery/17.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/17.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm web" >
+                                    <img src="assets/images/gallery/18.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/18.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/19.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/19.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm bcards" >
+                                    <img src="assets/images/gallery/20.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/20.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
+                                <div class="single_portfolio tile scale-anm flyers" >
+                                    <img src="assets/images/gallery/21.jpg" alt="" />
+                                    <div class="grid_item_overlay">
+                                        <a href="assets/images/gallery/21.jpg" class="portfolio-img"> <i class="fa fa-link"></i></a>
+<!--                                        <a href="#"> <i class="fa fa-search"></i></a>-->
+                                    </div>
+                                </div>
                             </div>
 
                             <div style="clear:both;"></div>  
