Photography competition updated

--- a/index.html
+++ b/index.html
@@ -400,20 +400,11 @@
                         <h3>OUR ACTIVITIES THROUGHT GOA</h3>
                         <div class="separator"></div>
                     </div>
-                    <div class="alert alert-success alert-dismissible" role="alert">
+                    <div class="alert alert-danger alert-dismissible" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <p>This year Summer promises to be extra grand for people with stars on their mind😀</p>
-                      <p>This years summer session at AFA is something extraordinary... Meticulously and with back breaking efforts, we have put together a session for 100% astronomy education...</p>
-                        <ul>
-                            <li># Telescopes</li>
-                            <li># Observation</li>
-                            <li># Software</li>
-                            <li># Astrophotography</li>
-                        </ul>   
-
-                        <p>Come see us and have a good time...</p> 
+                    
+                        <img src="./assets/images/Temperory/competition.jpg">
                         
-                        <a href="/assets/images/Temperory/summercamp.jpeg" target="_blank" download>Click here to download the summercamp schedule</a>
                     </div>
                     <iframe src="https://calendar.google.com/calendar/embed?src=en04dndnrfmteuonean67vg3a4%40group.calendar.google.com&ctz=Asia%2FCalcutta" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </section>
